# neoroll

./: .gitignore  CREDITS.txt  Cargo.toml  README.md  world.txt
.cargo/: config.toml
neoroll_client/: Cargo.toml
neoroll_client/assets/tiles/region/: grassland.ron
neoroll_client/assets/tilesets/: regions.ron
neoroll_client/src/: main.rs
neoroll_gui/: CREDITS.txt  Cargo.toml  rust-toolchain.toml
neoroll_gui/assets/tiles/map/: campfire.ron  tree.ron  tree1a.ron  tree1b.ron  tree1c.ron  tree2a.ron  tree2b.ron  tree3a.ron  tree3b.ron  tree3c.ron  tree4a.ron  tree4b.ron  tree4c.ron  tree4d.ron
neoroll_gui/assets/tiles/region/: big_leaf_tree.ron  forest.ron  grass_land.ron  short_grass.ron  soil.ron
neoroll_gui/assets/tiles/world/: apple.ron  big_leaf_tree.ron  branches.ron  bush.ron  campfire.ron  fruit_bush1.ron  fruit_bush2.ron  fruit_tree1.ron  fruit_tree2.ron  human.ron  raw_flint.ron  short_grass.ron  soil.ron  soil_flint.ron  storage.ron
neoroll_gui/assets/tilesets/: map.ron  regions.ron  world.ron
neoroll_gui/src/: camera.rs  debug.rs  image.rs  input.rs  layer.rs  main.rs  scene.rs  server.rs  setup.rs  utils.rs  window.rs  world.rs
neoroll_gui/src/graphics/: map.rs  mod.rs  resolver.rs  tileset.rs  world.rs
neoroll_gui/src/graphics/tileset/: map.rs  mod.rs  world.rs
neoroll_gui/src/plugins/: game.rs  mod.rs
neoroll_gui/src/plugins/gui/: build.rs  detail.rs  mod.rs  paint.rs  root.rs  state.rs  stock.rs  targets.rs
neoroll_gui/src/plugins/gui/targets/: keep_stock.rs  mod.rs
neoroll_gui/src/plugins/inputs/: drag.rs  mod.rs  state.rs  update.rs  window.rs
neoroll_gui/src/plugins/map/: background.rs  container.rs  display.rs  element.rs  init.rs  lake.rs  mod.rs  tileset.rs  updater.rs
neoroll_gui/src/plugins/server/: gateway.rs  listener.rs  mod.rs
neoroll_gui/src/plugins/world/: container.rs  creature.rs  display.rs  illustration.rs  init.rs  mod.rs  resolver.rs  tileset.rs  updater.rs
neoroll_gui/src/shortcut/: progress.rs
neoroll_gui/src/world/: container.rs  mod.rs  reader.rs  region.rs  updater.rs
neoroll_server/: Cargo.toml
neoroll_server/src/: gateway.rs  lib.rs  main.rs  meta.rs  run.rs  server.rs  state.rs  subscriptions.rs  target.rs  utils.rs
neoroll_server/src/action/: client.rs  collect.rs  drop.rs  hello.rs  migrant.rs  mod.rs  move_.rs  need.rs  target.rs
neoroll_server/src/action/job/: affect.rs  mod.rs
neoroll_server/src/action/job/realize/: food.rs  mod.rs  search.rs
neoroll_server/src/shortcut/: mod.rs
neoroll_server/src/shortcut/creature/: mod.rs
neoroll_server/src/state/: mod.rs  world.rs
neoroll_server/src/state/client/: build.rs  builder.rs  human.rs  material.rs  mod.rs  target.rs
neoroll_server/src/state/game/: mod.rs  need.rs  settings.rs
neoroll_world/: Cargo.toml
neoroll_world/src/: lib.rs  scale.rs  space.rs  state.rs  tile.rs  utils.rs
neoroll_world/src/entity/: creature.rs  floor.rs  ground.rs  human.rs  mod.rs  structure.rs
neoroll_world/src/entity/structure/: mod.rs
neoroll_world/src/gameplay/: config.rs  material.rs  mod.rs  progress.rs
neoroll_world/src/gameplay/behavior/: mod.rs
neoroll_world/src/gameplay/job/: mod.rs  requirement.rs
neoroll_world/src/gameplay/need/: mod.rs
neoroll_world/src/gameplay/tribe/: mod.rs  structure.rs
neoroll_world/src/generator/: dummy.rs  mod.rs  perlin_noise_simple.rs
neoroll_world/src/map/: area.rs  builder.rs  element.rs  find.rs  mod.rs  part.rs  patch.rs  sector.rs
neoroll_world/src/space/: area.rs  layer.rs  mod.rs  part.rs  patch.rs  world.rs
neoroll_world/src/tests/: mod.rs  str_map.rs
