[package]
name = "neoroll_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
neoroll_world = { path = "../neoroll_world" }
# WARNING : remove dynamic_linking feature for production !!
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_tileset = "0.8.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
