[package]
name = "neoroll_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
neoroll_server = { path = "../neoroll_server" }
neoroll_world = { path = "../neoroll_world" }
# WARNING : remove dynamic_linking feature for production !!
bevy = { version = "0.11.2" }
bevy_tileset = "0.8.0"
crossbeam = "0.8.4"
bevy_egui = "0.22"
strum = "0.25"
strum_macros = "0.25.2"
# tests
rstest = "0.18.1"
bevy_prototype_lyon = "0.9.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
