[package]
name = "neoroll_server"
version = "0.1.0"
edition = "2021"

[dependencies]
neoroll_world = { path = "../neoroll_world" }
num_cpus = "1.16"
rayon = "1.10"
crossbeam = "0.8.4"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]