[package]
name = "neoroll_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
strum = "0.25"
strum_macros = "0.25.2"
weighted_rand = "0.4"
glam = "0.24.1"
worldgen = "0.5.3"
structopt = "0.3.26"
anyhow = "1.0.75"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
pathfinding = "4.9.1"
enum-display = "0.1.4"
# tests
rstest = "0.18.1"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Be able to serialize/deserialize
]
